--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link rel="apple-touch-icon" href="/images/apple_own_image.png"> <!-- we love you apple-->
+    <link rel="icon" type="image/png" href="images/app_icon.png" />
 
     <link rel="manifest" href="/manifest.webmanifest">
     <meta name="theme-color" content="#3367D6" />
